--- a/ContryDefender/Base.lproj/LaunchScreen.storyboard
+++ b/ContryDefender/Base.lproj/LaunchScreen.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -19,9 +20,8 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MYZ-Qg-mFW" userLabel="background">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="B0q-1y-QP0" userLabel="logoPlaceholder">
-                                <rect key="frame" x="121.66666666666669" y="180.66666666666666" width="150" height="149.99999999999997"/>
-                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="B0q-1y-QP0" userLabel="logoPlaceholder">
+                                <rect key="frame" x="17.666666666666657" y="76.666666666666686" width="357.66666666666674" height="358"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="B0q-1y-QP0" secondAttribute="height" multiplier="1:1" id="an8-3H-Mwj"/>
                                 </constraints>
@@ -31,7 +31,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="MYZ-Qg-mFW" secondAttribute="bottom" id="64b-c7-RJY"/>
-                            <constraint firstAttribute="height" secondItem="B0q-1y-QP0" secondAttribute="height" multiplier="5.68" id="7Iz-SU-f28"/>
+                            <constraint firstAttribute="height" secondItem="B0q-1y-QP0" secondAttribute="height" multiplier="2.38" id="7Iz-SU-f28"/>
                             <constraint firstItem="MYZ-Qg-mFW" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="91s-av-1Ii"/>
                             <constraint firstItem="B0q-1y-QP0" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="PSe-LJ-qRd"/>
                             <constraint firstItem="MYZ-Qg-mFW" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="ZMG-pn-T9Q"/>
@@ -46,11 +46,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="logo" width="279" height="244"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
