--- a/ContryDefender/Scenes/SplashScreen/SplashScreen.storyboard
+++ b/ContryDefender/Scenes/SplashScreen/SplashScreen.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -19,9 +20,8 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NOq-hR-D02" userLabel="background">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3YL-B9-gZh" userLabel="logoPlaceholder">
-                                <rect key="frame" x="120" y="179.33333333333337" width="153" height="152.66666666666663"/>
-                                <color key="backgroundColor" systemColor="systemCyanColor"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="3YL-B9-gZh" userLabel="logoPlaceholder">
+                                <rect key="frame" x="17.666666666666657" y="76.666666666666686" width="357.66666666666674" height="358"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="3YL-B9-gZh" secondAttribute="height" multiplier="1:1" id="xdH-c6-gbi"/>
                                 </constraints>
@@ -46,7 +46,7 @@ Makar Koblia</string>
                             <constraint firstItem="GU2-Ey-Jeo" firstAttribute="centerX" secondItem="NKh-TX-8bD" secondAttribute="centerX" id="0Sz-3a-8VG"/>
                             <constraint firstAttribute="width" secondItem="GU2-Ey-Jeo" secondAttribute="width" multiplier="1.19794" id="2ZY-Jj-KZf"/>
                             <constraint firstAttribute="trailing" secondItem="NOq-hR-D02" secondAttribute="trailing" id="DlS-hU-SM7"/>
-                            <constraint firstAttribute="height" secondItem="3YL-B9-gZh" secondAttribute="height" multiplier="5.58" id="Fw7-9z-Ugs"/>
+                            <constraint firstAttribute="height" secondItem="3YL-B9-gZh" secondAttribute="height" multiplier="2.38" id="Fw7-9z-Ugs"/>
                             <constraint firstItem="3YL-B9-gZh" firstAttribute="centerX" secondItem="NKh-TX-8bD" secondAttribute="centerX" id="JEz-h2-U8b"/>
                             <constraint firstItem="GU2-Ey-Jeo" firstAttribute="centerY" secondItem="NKh-TX-8bD" secondAttribute="centerY" multiplier="1.6" id="JOU-vl-ufm"/>
                             <constraint firstAttribute="bottom" secondItem="NOq-hR-D02" secondAttribute="bottom" id="ONd-rb-e3D"/>
@@ -66,11 +66,9 @@ Makar Koblia</string>
         </scene>
     </scenes>
     <resources>
+        <image name="logo" width="279" height="244"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemCyanColor">
-            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
