--- a/ContryDefender/Base.lproj/LaunchScreen.storyboard
+++ b/ContryDefender/Base.lproj/LaunchScreen.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="B0q-1y-QP0" userLabel="logoPlaceholder">
-                                <rect key="frame" x="17.666666666666657" y="76.666666666666686" width="357.66666666666674" height="358"/>
+                                <rect key="frame" x="17.666666666666657" y="34" width="357.66666666666674" height="358"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="B0q-1y-QP0" secondAttribute="height" multiplier="1:1" id="an8-3H-Mwj"/>
                                 </constraints>
@@ -35,7 +35,7 @@
                             <constraint firstItem="MYZ-Qg-mFW" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="91s-av-1Ii"/>
                             <constraint firstItem="B0q-1y-QP0" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="PSe-LJ-qRd"/>
                             <constraint firstItem="MYZ-Qg-mFW" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="ZMG-pn-T9Q"/>
-                            <constraint firstItem="B0q-1y-QP0" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="0.6" id="l6r-AP-cpH"/>
+                            <constraint firstItem="B0q-1y-QP0" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="0.5" id="l6r-AP-cpH"/>
                             <constraint firstAttribute="trailing" secondItem="MYZ-Qg-mFW" secondAttribute="trailing" id="oQG-Ux-izS"/>
                         </constraints>
                     </view>
