--- a/ContryDefender/Scenes/SplashScreen/SplashScreen.storyboard
+++ b/ContryDefender/Scenes/SplashScreen/SplashScreen.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="3YL-B9-gZh" userLabel="logoPlaceholder">
-                                <rect key="frame" x="17.666666666666657" y="76.666666666666686" width="357.66666666666674" height="358"/>
+                                <rect key="frame" x="17.666666666666657" y="34" width="357.66666666666674" height="358"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="3YL-B9-gZh" secondAttribute="height" multiplier="1:1" id="xdH-c6-gbi"/>
                                 </constraints>
@@ -50,7 +50,7 @@ Makar Koblia</string>
                             <constraint firstItem="3YL-B9-gZh" firstAttribute="centerX" secondItem="NKh-TX-8bD" secondAttribute="centerX" id="JEz-h2-U8b"/>
                             <constraint firstItem="GU2-Ey-Jeo" firstAttribute="centerY" secondItem="NKh-TX-8bD" secondAttribute="centerY" multiplier="1.6" id="JOU-vl-ufm"/>
                             <constraint firstAttribute="bottom" secondItem="NOq-hR-D02" secondAttribute="bottom" id="ONd-rb-e3D"/>
-                            <constraint firstItem="3YL-B9-gZh" firstAttribute="centerY" secondItem="NKh-TX-8bD" secondAttribute="centerY" multiplier="0.6" id="jwl-t5-B4M"/>
+                            <constraint firstItem="3YL-B9-gZh" firstAttribute="centerY" secondItem="NKh-TX-8bD" secondAttribute="centerY" multiplier="0.5" id="jwl-t5-B4M"/>
                             <constraint firstItem="NOq-hR-D02" firstAttribute="top" secondItem="NKh-TX-8bD" secondAttribute="top" id="q5g-oi-QFg"/>
                             <constraint firstItem="NOq-hR-D02" firstAttribute="leading" secondItem="NKh-TX-8bD" secondAttribute="leading" id="u2t-CB-QSq"/>
                         </constraints>
@@ -58,6 +58,7 @@ Makar Koblia</string>
                     <connections>
                         <outlet property="creditsLabel" destination="GU2-Ey-Jeo" id="Mmd-U0-TcX"/>
                         <outlet property="labelCenterYConstraint" destination="JOU-vl-ufm" id="Bdk-TB-7P4"/>
+                        <outlet property="scaleLogoConstraint" destination="Fw7-9z-Ugs" id="e7Q-I9-4kr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
