--- a/ContryDefender/Scenes/SplashScreen/SplashScreen.storyboard
+++ b/ContryDefender/Scenes/SplashScreen/SplashScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+    <device id="retina6_12" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,22 +12,22 @@
         <!--Splash Screen View-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="SplashScreenView" id="Y6W-OH-hqX" customClass="SplashScreenView" customModule="ContryDefender" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SplashScreenView" modalTransitionStyle="flipHorizontal" id="Y6W-OH-hqX" customClass="SplashScreenView" customModule="ContryDefender" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NKh-TX-8bD">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NOq-hR-D02" userLabel="background">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                                <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="3YL-B9-gZh" userLabel="logoPlaceholder">
-                                <rect key="frame" x="17.666666666666657" y="34" width="357.66666666666674" height="358"/>
+                                <rect key="frame" x="343.33333333333326" y="15.666666666666671" width="165.33333333333337" height="165"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="3YL-B9-gZh" secondAttribute="height" multiplier="1:1" id="xdH-c6-gbi"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GU2-Ey-Jeo">
-                                <rect key="frame" x="32.333333333333343" y="563" width="328.33333333333326" height="237.33333333333337"/>
+                                <rect key="frame" x="70.333333333333314" y="57.333333333333314" width="711.33333333333348" height="514.33333333333348"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="GU2-Ey-Jeo" secondAttribute="height" multiplier="112:81" id="WvR-yz-Rk2"/>
                                 </constraints>
@@ -63,7 +63,7 @@ Makar Koblia</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="-34"/>
+            <point key="canvasLocation" x="-290" y="-376"/>
         </scene>
     </scenes>
     <resources>
